--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     <article class="card">
             <img src="img/articles/prince.jpg" alt="" />
             <div>
-              <div class="category category-ent">Meet the new Billonaire</div>
-              <h3><a href="article.html">Guy failed IIT 8 times </a></h3>
+              <div class="category category-ent">Success</div>
+              <h3><a href="article.html">Meet the new Billonaire</a></h3>
               <p>
                 Priyanshu, the founder of juju.com from Ashoknagar which is a small town in Madhya Pradesh, Has created a company valued at 5billionUSD.
                 He is a college dropout, who made headlines after rejecting google's offer to become its youngest ceo ever. 
