--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
            <div class="category category-tech">Failure</div>
            <h3><a href="article.html">DM,SDM,Tahsildar,Navtahsildar,....Patwari </a></h3>
            <p>
-             MPPSC student fails to pass patwari exam. Megha Singh, a many years old Mppsc student takes lessons from our previous articles and decide to lower her
+             MPPSC student fails to clear pre mutltiple times, decides to lower the challenge. Megha Singh, a many years old Mppsc student takes lessons from our previous articles and decide to lower her
              challenge, to match her mental capacity. she applies for Patwari, FAILS THERE TOO.
            </p>         </article>
           
